# cppevents

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: eventsConfig.cmake.in
include/events/: events.h
tests/: CMakeLists.txt  common.h  eventmemorytest.cpp  freefunctiontests.cpp  lambdatest.cpp  main.cpp  memberfunctions.cpp
